source/stylesheets/partials/_accordion.sass
.privacy-policy,
.terms
  h2
    color: palette(sections, atualiza-enem)
    font:
      size: rem(21)
      weight: 600

  h3
    font-size: rem(14)

  ol
    list-style: upper-latin
    list-style-position: inside

    > li
      +background(linear-gradient(palette(blue, gradient-top), palette(blue, gradient-bottom)) left repeat)
      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#1075AE, endColorstr=#0D6495)
      border-radius: 4px
      color: white
      font-weight: bold
      margin-bottom: 24px
      padding: 0 16px

      span
        cursor: pointer
        display: inline-block
        padding: 16px 0
        width: 98%

      .fa
        display: inline-block
        float: right

      &.open span
        border-radius: 4px 4px 0 0


      > ol
        background-color: palette(white, 02-darken)
        display: none
        padding: 20px 20px 20px 50px
        list-style-position: outside
        margin-left: -16px
        width: 103.4%

        li
          background: transparent
          filter: none
          color: $_color-base-grey
          font:
            size: rem(18)
            weight: bold

        p
          font:
            size: rem(16)
            weight: normal

    ol
      list-style-type: decimal

